reorder the methods